# nw-fund

./: .commitlintrc.json  .editorconfig  .gitignore  .oxfmtrc.json  .oxlintrc.json  .release-it.ts  README.md  Taskfile.yml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.husky/: pre-commit
scripts/: release.ts  rename-bundle.cjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  nw_fund.db  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: query-05c5ee53bd7151931d9f8d59d6a7df322af3b8f576ab776a1ccd2a9b36bb2758.json  query-2c57dbe254089bdaf1bec5312669651f872a3b4482073ae5439c1f23157ad4ac.json  query-2c6850b6fb0bd6d038c5674e7ca7cf7f39e11301d6f0945fc0b744eb4a230b12.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/migrations/: 20260429090537_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: window.rs
src-tauri/src/features/holiday/: mod.rs  repo.rs  service.rs  vo.rs
src-tauri/src/infra/sqlite/: pool.rs
src-tauri/src/infra/tauri/cmds/: cmd_holiday.rs  mod.rs
src-tauri/src/services/: mod.rs
src/components/Layout/: Sidebar.tsx  WindowControls.tsx  index.tsx
src/components/ProList/: index.tsx
src/components/ProListItem/: index.tsx
src/constants/: index.ts
src/features/Preference/: index.tsx
src/features/Preference/components/About/: index.tsx
src/features/Preference/components/About/components/UpdateApp/: index.tsx
src/hooks/: useTauriListen.ts  useTray.ts
src/locales/: en-US.json  index.ts  zh-CN.json
src/plugins/: window.ts
src/router/: index.tsx
src/stores/: index.ts
src/utils/: dayjs.ts
