[package]
name = "nw-fund"
version = "0.0.1"
description = "Fund management application"
authors = ["NimbleWing"]
edition = "2024"
default-run = "nw-fund"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nw_fund_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-process = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-latest-json = "0.4"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2.5"

[[bin]]
name = "generate-latest-json"
path = "src/bin/generate_latest_json.rs"


